# claude-wizard

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cc.md  eslint.config.js  package-lock.json  package.json  snake-prd.md  syntax-check.js
.claude/agents/: template-creator.md
.claude/commands/: generate-agents.md  generate-workflows.md
.github/workflows/: changelog.yml  ci.yml  npm-publish.yml  release.yml
config/: repositories.json
docs/: BOOTSTRAP_TEMPLATE_GUIDE.md  RELEASE.md  RELEASE_GUIDE.md
docs/examples/: README.md
docs/examples/minimal-template/python/: .gitignore  BOOTSTRAP.md
docs/examples/minimal-template/python/tests/: __init__.py  (+1 more)
src/: bootstrap.js  github.js  index.js  installer.js  prompts-clack.js  prompts.js  repository-manager.js  template-bootstrapper.js  template-bootstrapper.js.backup  template-repository.js  ui-utils.js  utils.js  warning-manager.js
templates/: README.md
templates/flutter_bloc_patrol/: .env.example  .gitignore  BOOTSTRAP.md  README.md  analysis_options.yaml  codemagic.yaml  pubspec.yaml
templates/flutter_bloc_patrol/assets/fonts/: .gitkeep
templates/flutter_bloc_patrol/assets/icons/: .gitkeep
templates/flutter_bloc_patrol/assets/images/: .gitkeep
templates/flutter_bloc_patrol/integration_test/: app_test.dart
templates/flutter_bloc_patrol/lib/: l10n.yaml  main.dart
templates/javascript/: .env.example  .gitignore  BOOTSTRAP.md  README.md  package.json
templates/javascript/src/: index.js
templates/javascript/tests/: index.test.js
templates/python/: README.md  pyproject.toml
templates/python/{{project_name}}/: main.py
test/: bash-escaping.test.js  bootstrap.test.js  installer.test.js  repository-manager.test.js  template-bootstrapper.test.js  template-repository.test.js  utils-extended.test.js  utils.test.js
(+34 files in other folders)
